assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300&family=Quicksand:wght@400;700&display=swap');


* {
    box-sizing: border-box;
}

body {
    font-family: 'Montserrat', sans-serif;
    padding: 0;
    margin: 0;
    background-color: #181325;
    color: white;
}

p {
    line-height: 27px;
}

h2 {
    font-size: 60px;
}

hr {
    margin-top: 100px;
}

.jumbotron {
    width: 100%;
    min-height: 350px;
    background-image: url(/assets/images/computer.jpg);
    object-fit: cover;
    object-position: center;
    padding: 60px;
    text-align: center;
    font-size: 20px;
    color: white;
    align-items: center;
}

.jumbotron p {
    width: 60%;
    margin: 10px auto;
    line-height: 1.5em;
    font-weight: 300;
    font-size: 18px;
}

header {
    display: inline;
}

nav {
    background-color: #251D3A;
    padding: 10px;
    position: sticky;
    top: 0;
    box-shadow: 0 4px 12px 2px #0f0c17;
    z-index: 5;
}

nav li {
    display: inline;
    list-style: none;
}

nav a {
    color: white;
    text-decoration: none;
    font-size: 20px;
    font-weight: 400;
    margin-right: 25px;
}

nav a:hover {
    color: orange;
    font-weight: bold;
    text-decoration: underline;
}

#content {
    padding: 50px;
}

#perkenalan {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 30px;
}

.content span {
    color: orange;
}

.content p {
    width: 80%;
    font-size: 18px;
}

.img-profile figure {
    padding-left: 40px;
}

.img-profile img {
    padding-right: 0;
    width: 320px;
    border-radius: 15px;
    border: 4px solid orange;
    box-shadow: 20px 20px 0 orange;
}

#skills-highlight {
    margin-top: 60px;
}

.container-scroll {
    top: 30px;
    position: relative;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.container-scroll .scroll {
    width: 100%;
    height: 100%;
    display: flex;
}

.container-scroll .scroll div h3 {
    margin: 0;
    font-size: 80px;
    white-space: nowrap;
    animation: animate 15s linear infinite;
}

.container-scroll .scroll div:nth-child(2) {
    animation-delay: -10ms;
}

.text-orange {
    color: orange;
}

#design-projects {
    margin-top: 80px;
}

#design-projects figure {
    margin: 0;
}

figure .img-project {
    border-radius: 12px;
    width: 100%;
}

.projects-container {
    padding-right: 15px;
    margin-top: 50px;
    display: flex;
    width: 100%;
    height: 100%;
    justify-content: space-between;
}

.projects-container .item-content {
    margin-top: 30px;
}

.projects-container .item-content a {
    color: orange;
    font-size: 20px;
    margin-top: 15px;
}

.card {
    width: 400px;
    padding: 20px;
    border: 2px solid orange;
    border-radius: 15px;
    box-shadow: 15px 15px 0 orange;
}

.btn {
    padding: 15px 20px;
    background-color: orange;
    color: #251D3A;
    border: 2px solid white;
    border-radius: 10px;
    font-weight: bold;
    text-decoration: none;
}

.btn:hover {
    box-shadow: 4px 8px white;
    transition: 0.5s ease-in-out;
}

.flex {
    display: flex;
}

#coding-journeys {
    display: flex;
    margin-top: 80px;
}

.img-code figure {
    margin: 0;
}

.img-code img {
    width: 450px;
    border-radius: 15px;
    border: 4px solid orange;
    box-shadow: 20px 20px 0 orange;
}

#coding-journeys .content {
    padding-left: 100px;
}

#coding-journeys .content p {
    margin-bottom: 60px;
}

#frameworks figure img {
    width: 150px;
}


/* Animation */

@keyframes animate {
    0%
    {
        transform: translateX(0%);
    }

    100%
    {
        transform: translateX(-100%);
    }
}


@media screen and (max-width: 928px) {

    hr {
        margin-top: 60px;
    }

    .jumbotron {
        padding: 50px;
        font-size: 18px;
    }

    .jumbotron p {
        width: 80%;
        font-size: 16px;
    }

    nav {
        text-align: center;
    }

    nav a {
        font-size: 16px;
    }

    #content {
        padding: 30px;
        text-align: center;
    }

    #perkenalan {
        flex-direction: column-reverse;
    }

    .img-profile figure {
        padding-right: 50px;
        margin: 0 0 30px 0;
    }

    .img-profile img {
        width: 250px;
    }

    .content h2 {
        font-size: 40px;
    }
    
    .content p {
        width: 100%;
        font-size: 16px;
    }

    .content span {
        color: orange;
    }

    #skills-highlight {
        margin-top: 20px;
    }

    .container-scroll .scroll div h3 {
        font-size: 40px;
        margin: 0;
    }

    #design-projects {
        margin-top: 50px;
    }

    .projects-container {
        margin-top: 50px;
        display: flex;
        flex-direction: column;
    }

    .card {
        width: 100%;
        margin-bottom: 60px;
    }

    figure .img-project {
        border-radius: 12px;
        width: 100%;
    }

    #coding-journeys {
       flex-direction: column;
       text-align: center;
    }

    .img-code img {
        width: 250px;
        margin-bottom: 30px;
    }

    #coding-journeys .content {
        padding-left: 0;
    }

    #coding-journeys .content p {
        margin-bottom: 50px;
    }
}

